amended the z-index for carousel indicators to show correctly

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@ body {
     position: fixed;
     top: 35px;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 .navbar-brand {
@@ -34,7 +34,7 @@ body {
     padding-top: 5px;
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 /*Main section--------------------------------*/
@@ -45,6 +45,9 @@ main {
 }
 
 /*carousel-----------------------------*/
+.carousel-indicators {
+    z-index: 1;
+}
 
 #carousel-example-generic {
     width: 100vw;
